--- a/app/src/main/res/layout/activity_prikaz_weba.xml
+++ b/app/src/main/res/layout/activity_prikaz_weba.xml
@@ -31,8 +31,9 @@
         android:layout_width="wrap_content"
         android:layout_gravity="start"
         app:headerLayout="@layout/header"
-        app:menu="@menu/drawer"/>
+        app:menu="@menu/drawer">
 
+    </android.support.design.widget.NavigationView>
 
     </android.support.v4.widget.DrawerLayout>
 
