--- a/app/src/main/res/layout/activity_prikaz_weba.xml
+++ b/app/src/main/res/layout/activity_prikaz_weba.xml
@@ -9,12 +9,18 @@
 
     <include layout="@layout/fragment_container" />
 
-    <FrameLayout
+    <!--<LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#fff"
-        android:id="@+id/content_frame">
-    </FrameLayout>
+        android:orientation="vertical">
+        <include layout="@layout/toolbar" />
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#fff"
+            android:id="@+id/content_frame">
+        </FrameLayout>
+    </LinearLayout>-->
 
     <android.support.design.widget.NavigationView
         android:id="@+id/navigation_view"
@@ -22,7 +28,8 @@
         android:layout_width="wrap_content"
         android:layout_gravity="start"
         app:headerLayout="@layout/header"
-        app:menu="@menu/drawer" />
+        app:menu="@menu/drawer">
+
+    </android.support.design.widget.NavigationView>
 
 </android.support.v4.widget.DrawerLayout>
-
