--- a/app/src/main/res/layout/activity_prikaz_weba.xml
+++ b/app/src/main/res/layout/activity_prikaz_weba.xml
@@ -27,8 +27,16 @@
         android:layout_height="match_parent"
         android:layout_width="wrap_content"
         android:layout_gravity="start"
-        app:headerLayout="@layout/header"
-        app:menu="@menu/drawer">
+        app:headerLayout="@layout/header">
+       <!-- app:menu="@menu/drawer"> -->
+
+        <ExpandableListView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@android:color/white"
+            android:layout_marginTop="192dp"
+            android:id="@+id/navigationmenu">
+        </ExpandableListView>
 
     </android.support.design.widget.NavigationView>
 
